k8s/app_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-api
  namespace: external-secrets
spec:
  replicas: 2
  selector:
    matchLabels:
      app: transaction-api
  template:
    metadata:
      labels:
        app: transaction-api
    spec:
      containers:
      - name: transaction-api
        image: public.ecr.aws/c0v8s4a9/transactionapi:latest
        ports:
        - containerPort: 5000
