k8s/postgres_service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: external-secrets
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
