k8s/service.yml
# k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transaction-api-service
  namespace: external-secrets
spec:
  selector:
    app: transaction-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
